[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/ArenaBackgrounds/Infield/art/infield_background.png" type="Texture" id=1]
[ext_resource path="res://GameComponents/ArenaBackgrounds/scenes/StadiumStand/StadiumStand.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameComponents/ArenaBackgrounds/scenes/BackgroundCrowd/BackgroundCrowd.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/ArenaBackgrounds/Infield/art/infield_advertising.png" type="Texture" id=4]
[ext_resource path="res://GameComponents/ArenaBackgrounds/scenes/AdBoards/AdBoard.tscn" type="PackedScene" id=5]
[ext_resource path="res://GameComponents/ArenaBackgrounds/Infield/infield_background.gd" type="Script" id=6]
[ext_resource path="res://GameComponents/ArenaBackgrounds/scenes/AdBoards/ad_board_player.gd" type="Script" id=7]
[ext_resource path="res://Assets/ArenaBackgrounds/art/stadium_light.png" type="Texture" id=8]
[ext_resource path="res://Assets/GameMusic/infield.ogg" type="AudioStream" id=9]
[ext_resource path="res://GameComponents/ArenaBackgrounds/scenes/Seagull/Seagull.tscn" type="PackedScene" id=10]
[ext_resource path="res://GameComponents/ArenaBackgrounds/scenes/BackgroundCrowd/crowd_control.gd" type="Script" id=11]

[sub_resource type="Animation" id=1]
resource_name = "RESET"
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1100, -200 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fly_into_scene"
length = 45.0
tracks/0/type = "method"
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 36.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "_flash_light_for_seagull"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( -0.7, 0, 2.2, 11.9, 18.5 ),
"transitions": PoolRealArray( 1, 0.63728, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1000, -47 ), Vector2( 698, -30 ), Vector2( 1021, 141 ), Vector2( 1021, 141 ), Vector2( -39, 36 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.9, 2.7, 3.9, 4.7, 6.3, 7.5, 9, 11.8, 12.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "fly"
}, {
"args": [  ],
"method": "land"
}, {
"args": [  ],
"method": "stand"
}, {
"args": [  ],
"method": "look"
}, {
"args": [  ],
"method": "peck"
}, {
"args": [  ],
"method": "stand"
}, {
"args": [  ],
"method": "look"
}, {
"args": [  ],
"method": "peck"
}, {
"args": [  ],
"method": "take_off"
}, {
"args": [  ],
"method": "fly"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 5.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="InfieldBackground" type="Node2D"]
script = ExtResource( 6 )

[node name="CrowdControl" type="Node" parent="."]
script = ExtResource( 11 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 640, 400 )
texture = ExtResource( 1 )

[node name="TopBackgroundCrowdsHome" type="Node2D" parent="."]
position = Vector2( 260, 108 )

[node name="BackgroundCrowd0" parent="TopBackgroundCrowdsHome" instance=ExtResource( 3 )]
position = Vector2( -155, -60 )

[node name="BackgroundCrowd1" parent="TopBackgroundCrowdsHome" instance=ExtResource( 3 )]
position = Vector2( 200, -60 )

[node name="BackgroundCrowd2" parent="TopBackgroundCrowdsHome" instance=ExtResource( 3 )]
position = Vector2( -170, -30 )

[node name="BackgroundCrowd3" parent="TopBackgroundCrowdsHome" instance=ExtResource( 3 )]
position = Vector2( 195, -30 )

[node name="BackgroundCrowd4" parent="TopBackgroundCrowdsHome" instance=ExtResource( 3 )]
position = Vector2( -185, 0 )

[node name="BackgroundCrowd5" parent="TopBackgroundCrowdsHome" instance=ExtResource( 3 )]
position = Vector2( 190, 0 )

[node name="BackgroundCrowd6" parent="TopBackgroundCrowdsHome" instance=ExtResource( 3 )]
position = Vector2( -200, 30 )

[node name="BackgroundCrowd7" parent="TopBackgroundCrowdsHome" instance=ExtResource( 3 )]
position = Vector2( 185, 30 )

[node name="TopBackgroundCrowdsAway" type="Node2D" parent="."]
position = Vector2( 1020, 108 )

[node name="BackgroundCrowd0" parent="TopBackgroundCrowdsAway" instance=ExtResource( 3 )]
position = Vector2( -200, -60 )
frame = 1
team = 2

[node name="BackgroundCrowd1" parent="TopBackgroundCrowdsAway" instance=ExtResource( 3 )]
position = Vector2( 155, -60 )
frame = 1
team = 2

[node name="BackgroundCrowd2" parent="TopBackgroundCrowdsAway" instance=ExtResource( 3 )]
position = Vector2( -195, -30 )
frame = 1
team = 2

[node name="BackgroundCrowd3" parent="TopBackgroundCrowdsAway" instance=ExtResource( 3 )]
position = Vector2( 170, -30 )
frame = 1
team = 2

[node name="BackgroundCrowd4" parent="TopBackgroundCrowdsAway" instance=ExtResource( 3 )]
position = Vector2( -190, 0 )
frame = 1
team = 2

[node name="BackgroundCrowd5" parent="TopBackgroundCrowdsAway" instance=ExtResource( 3 )]
position = Vector2( 185, 0 )
frame = 1
team = 2

[node name="BackgroundCrowd6" parent="TopBackgroundCrowdsAway" instance=ExtResource( 3 )]
position = Vector2( -185, 30 )
frame = 1
team = 2

[node name="BackgroundCrowd7" parent="TopBackgroundCrowdsAway" instance=ExtResource( 3 )]
position = Vector2( 200, 30 )
frame = 1
team = 2

[node name="BackgroundCrowdsHome" type="Node2D" parent="."]
position = Vector2( 260, 316 )

[node name="BackgroundCrowd0" parent="BackgroundCrowdsHome" instance=ExtResource( 3 )]
position = Vector2( -155, -60 )

[node name="BackgroundCrowd1" parent="BackgroundCrowdsHome" instance=ExtResource( 3 )]
position = Vector2( 200, -60 )

[node name="BackgroundCrowd2" parent="BackgroundCrowdsHome" instance=ExtResource( 3 )]
position = Vector2( -170, -30 )

[node name="BackgroundCrowd3" parent="BackgroundCrowdsHome" instance=ExtResource( 3 )]
position = Vector2( 195, -30 )

[node name="BackgroundCrowd4" parent="BackgroundCrowdsHome" instance=ExtResource( 3 )]
position = Vector2( -185, 0 )

[node name="BackgroundCrowd5" parent="BackgroundCrowdsHome" instance=ExtResource( 3 )]
position = Vector2( 190, 0 )

[node name="BackgroundCrowd6" parent="BackgroundCrowdsHome" instance=ExtResource( 3 )]
position = Vector2( -200, 30 )

[node name="BackgroundCrowd7" parent="BackgroundCrowdsHome" instance=ExtResource( 3 )]
position = Vector2( 185, 30 )

[node name="BackgroundCrowdsAway" type="Node2D" parent="."]
position = Vector2( 1020, 316 )

[node name="BackgroundCrowd0" parent="BackgroundCrowdsAway" instance=ExtResource( 3 )]
position = Vector2( -200, -60 )
frame = 1
team = 2

[node name="BackgroundCrowd1" parent="BackgroundCrowdsAway" instance=ExtResource( 3 )]
position = Vector2( 155, -60 )
frame = 1
team = 2

[node name="BackgroundCrowd2" parent="BackgroundCrowdsAway" instance=ExtResource( 3 )]
position = Vector2( -195, -30 )
frame = 1
team = 2

[node name="BackgroundCrowd3" parent="BackgroundCrowdsAway" instance=ExtResource( 3 )]
position = Vector2( 170, -30 )
frame = 1
team = 2

[node name="BackgroundCrowd4" parent="BackgroundCrowdsAway" instance=ExtResource( 3 )]
position = Vector2( -190, 0 )
frame = 1
team = 2

[node name="BackgroundCrowd5" parent="BackgroundCrowdsAway" instance=ExtResource( 3 )]
position = Vector2( 185, 0 )
frame = 1
team = 2

[node name="BackgroundCrowd6" parent="BackgroundCrowdsAway" instance=ExtResource( 3 )]
position = Vector2( -185, 30 )
frame = 1
team = 2

[node name="BackgroundCrowd7" parent="BackgroundCrowdsAway" instance=ExtResource( 3 )]
position = Vector2( 200, 30 )
frame = 1
team = 2

[node name="StadiumStandsHome" type="Node2D" parent="."]
position = Vector2( 260, 426 )

[node name="StadiumStand0" parent="StadiumStandsHome" instance=ExtResource( 2 )]
position = Vector2( -215, -20 )
team = 1

[node name="StadiumStand1" parent="StadiumStandsHome" instance=ExtResource( 2 )]
position = Vector2( 180, -20 )
team = 1

[node name="StadiumStand2" parent="StadiumStandsHome" instance=ExtResource( 2 )]
position = Vector2( -230, 20 )
team = 1

[node name="StadiumStand3" parent="StadiumStandsHome" instance=ExtResource( 2 )]
position = Vector2( 175, 20 )
team = 1

[node name="StadiumStandsAway" type="Node2D" parent="."]
position = Vector2( 1020, 426 )

[node name="StadiumStand0" parent="StadiumStandsAway" instance=ExtResource( 2 )]
position = Vector2( -180, -20 )
flip_stand = true
team = 2

[node name="StadiumStand1" parent="StadiumStandsAway" instance=ExtResource( 2 )]
position = Vector2( 215, -20 )
flip_stand = true
team = 2

[node name="StadiumStand2" parent="StadiumStandsAway" instance=ExtResource( 2 )]
position = Vector2( -175, 20 )
flip_stand = true
team = 2

[node name="StadiumStand3" parent="StadiumStandsAway" instance=ExtResource( 2 )]
position = Vector2( 230, 20 )
flip_stand = true
team = 2

[node name="Advertising" type="Sprite" parent="."]
position = Vector2( 640, 400 )
texture = ExtResource( 4 )
script = ExtResource( 7 )

[node name="AdBoard0" parent="Advertising" instance=ExtResource( 5 )]
position = Vector2( -560, -197 )

[node name="AdBoard1" parent="Advertising" instance=ExtResource( 5 )]
position = Vector2( -280, -197 )

[node name="AdBoard2" parent="Advertising" instance=ExtResource( 5 )]
position = Vector2( 0, -197 )

[node name="AdBoard3" parent="Advertising" instance=ExtResource( 5 )]
position = Vector2( 280, -197 )

[node name="AdBoard4" parent="Advertising" instance=ExtResource( 5 )]
position = Vector2( 560, -197 )

[node name="AdBoardJumbo" parent="Advertising" instance=ExtResource( 5 )]
position = Vector2( -14, 132 )
scale = Vector2( 4, 4 )

[node name="StadiumLights" type="Node2D" parent="."]
position = Vector2( 640, 260 )

[node name="StadiumLight0" type="Sprite" parent="StadiumLights"]
position = Vector2( -500, 0 )
texture = ExtResource( 8 )
vframes = 2

[node name="StadiumLight1" type="Sprite" parent="StadiumLights"]
texture = ExtResource( 8 )
vframes = 2

[node name="StadiumLight2" type="Sprite" parent="StadiumLights"]
position = Vector2( 500, 0 )
texture = ExtResource( 8 )
vframes = 2

[node name="Seagull" parent="." instance=ExtResource( 10 )]
position = Vector2( 1100, -200 )
scale = Vector2( 0.5, 0.5 )
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Seagull"]
autoplay = "RESET"
anims/RESET = SubResource( 1 )
anims/fly_into_scene = SubResource( 2 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 9 )
autoplay = true
bus = "Music"

[node name="Tween" type="Tween" parent="."]
